--- a/css/styles.css
+++ b/css/styles.css
@@ -11,19 +11,22 @@
         --color-secundario: #44687d;
         --color-fuente: #3B6DB1;
         --fuente-primaria: 'Nanum Gothic', sans-serif;
+        --fuente-secudaria: 'PT Sans', sans-serif;
+        --fuente-articulo: 'PT Serif', serif;
     }
 
     .grid {
+        position: relative;
         display: grid;
-        grid-template-columns: 20% 50% 30%;
-        /* grid-template-rows: 10% 10% 45% 45% 10%; */
+        grid-template-columns: 20% 55% 25%;
         background-color: #fff;
+        font-family: var(--fuente-primaria);
     }
 
     header {
         background-color: var(--color-primario);
         min-height: 35px;
-        grid-column: 1/4;
+        grid-column: 1/-1;
         color: whitesmoke;
         text-align: left;
         padding: 10px;
@@ -108,7 +111,7 @@
         position: fixed;
         right: 70px;
         top: 15px;
-        z-index: 1;
+        z-index: 10;
     }
 
     .busqueda {
@@ -161,11 +164,11 @@
     #nav_superior {
         position: sticky;
         top: 0;
-        grid-column: 1/4;
+        grid-column: 1/-1;
         background-color: var(--color-secundario);
         display: flex;
         color: white;
-        font-family: var(--fuente-primaria);
+        z-index: 5;
     }
 
     #nav_superior>a {
@@ -189,17 +192,22 @@
     #navegador-lateral {
         display: flex;
         color: var(--color-fuente);
-        background-color: rgb(232, 232, 232);
+        background-color: #002147;
         grid-row: 3/5;
-        /* justify-content: center; */
         flex-direction: column;
+        position: relative;
+        z-index: 0;
+        transform: translateX(-80%);
+        transition: all 0.5s ease;
+    }
 
+    #navegador-lateral:hover {
+        transform: translateX(0%);
+        background-color: rgb(232, 232, 232);
     }
 
     .lista-navegador-lateral {
-        font-family: var(--fuente-primaria);
         margin: 60px 60px 150px;
-        /* border: 1px solid red; */
         border-radius: 10px;
     }
 
@@ -217,7 +225,7 @@
     }
 
     .lista-navegador-lateral li a i {
-        background-image: url(../img/icons8-chevron-left-30.png);
+        background-image: url(../img/icons8-chevron-right-30.png);
         display: inline-block;
         background-size: cover;
         height: 20px;
@@ -225,26 +233,181 @@
         padding-left: 20px;
     }
 
-    #lateral_aside {
-        grid-template-columns: 3/4;
+    .flecha {
+        position: absolute;
+        top: 40%;
+        right: 4px;
+        /* left: 50px; */
+        width: 45px;
+        height: 50px;
+        background-image: url('../img/icons8-slide-up-64.png');
+        background-size: contain;
+        background-repeat: no-repeat;
+        visibility: visible;
+        pointer-events: none;
+        /* transform: translateY(-50%); */
+
     }
 
-    .section_container {
-        /* background-color: aqua; */
+    #contenido {
+        /* grid-row: 3/5; */
+        padding: 10px;
+        /* border: 1px solid red; */
+        background-color: rgb(232, 232, 232);
+        position: relative;
+        left: -220px;
+        width: 70vw;
+        transition: all 0.5s ease;
+        font-family: var(--fuente-secudaria);
     }
 
-    section {
-        /* background-color: yellow; */
+    #contenido h2 {
+        text-align: center;
+        /* margin-bottom: 10px; */
+        background-color: white;
+        border-radius: 5px;
     }
 
-    aside {
-        /* background-color: goldenrod; */
+    #contenido article {
+        grid-row: 1/2;
+    }
 
+    #contenido section {
+        /* margin: 10px; */
+
+        /* flex: 1; */
+        display: grid;
+        grid-column: 80% 20%;
+        grid-row: 10% 90%;
+        background-color: white;
+        border-radius: 5px;
+        padding: 0px 10px 10px 0px;
+        margin-top: 20px;
+        /* border: 1px solid red; */
+
+    }
+
+    #contenido section aside .contenedor-fecha-compartir {
+        position: absolute;
+        bottom: 50px;
+
+    }
+
+    #contenido section .contenedor-compartir {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .aside-articulo .contenedor-fecha-compartir .contenedor-compartir i {
+        background-image: url(../img/icons8-twitter.svg);
+        background-size: cover;
+        display: inline-block;
+        background-color: red;
+        width: 20px;
+        height: 20px;
+        border: 1px solid red;
+    }
+
+    #contenido .contenedor-fecha-compartir .section-fecha,
+    .contenedor-compartir {
+        font-size: 12px;
+        font-family: var(--fuente-secudaria);
+        color: #746d69;
+        display: inline;
+        background-color: rgb(232, 232, 232);
+    }
+
+    #contenido article .titulo-articulo {
+        /* grid-column: 1/2; */
+        /* border: 1px solid black; */
+        padding-left: 5%;
+        text-align: justify;
+    }
+
+    #contenido article p {
+        /* border: 1px solid red; */
+        text-align: justify;
+        padding: 20px;
+        font-family: var(--fuente-articulo);
+    }
+
+
+    #contenido section .aside-articulo-uno {
+        background-image: url(../img/Oxford-picture.jpg);
+
+    }
+
+    #contenido .aside-articulo-dos {
+        background-image: url(../img/bfg_nick_cropped.webp);
+    }
+
+    #contenido section .aside-articulo {
+        position: relative;
+        top: 50px;
+        background-position-x: right;
+        background-size: contain;
+        background-repeat: no-repeat;
+        /* border: 1px solid red; */
+        grid-row: 1/3;
+        grid-column: 2/3;
+        min-width: 300px;
+        max-width: 400px;
+        height: 300px;
+        padding-left: 10px;
+        /* border: 1px solid red; */
+        border-radius: 5px;
+        background-color: rgb(232, 232, 232);
+        /* border: 1px solid red; */
+        /* align-self: center; */
+        /* justify-self: center; */
+        /* max-height: 300px; */
+
+    }
+
+    #aside-lateral ul {
+        font-family: var(--fuente-secudaria);
+        padding-top: 40px;
+    }
+
+    #aside-lateral ul li {
+        padding-bottom: 30px;
+    }
+
+    aside h2 {
+        text-align: center;
+        font-family: var(--fuente-secudaria);
+        font-size: 30px;
+        border-bottom: 1px solid lightgray;
+        padding-bottom: 10px;
+        margin: 0;
+    }
+
+    #aside-lateral .fecha-evento {
+        color: white;
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        background-color: var(--color-primario);
+        margin-right: 20px;
+        font-size: 20px;
+        font-weight: 600;
+        text-align: center;
+    }
+
+    #aside-lateral ul h3 {
+        display: inline-block;
+        width: 250px;
+        font-size: 18px;
+        margin: 0;
+        vertical-align: top;
+    }
+
+    #aside-lateral h3>span {
+        font-size: 16px;
+        font-weight: normal;
     }
 
     footer {
-        grid-column: 1/4;
+        grid-column: 1/-1;
         background-color: blueviolet;
     }
-
-    nav {}
