--- a/css/reconocimiento.css
+++ b/css/reconocimiento.css
@@ -8,22 +8,10 @@
     list-style: none;
 }
 
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-a:hover {
-    color: rgb(99, 99, 99);
-    text-decoration: underline;
-    text-decoration-thickness: 0.5px;
-    transition: color 0.3s ease-in-out;
-}
-
 .grid {
     position: relative;
     display: grid;
-    grid-template-columns: 75% 25%;
+    grid-template-columns: 20% 55% 25%;
     background-color: #fff;
     font-family: 'Nanum Gothic', Arial, Helvetica, sans-serif;
 }
@@ -44,7 +32,7 @@ header img {
     margin-left: 20px;
 }
 
-header .noticias-eventos-titulo {
+header .investigacion-titulo {
     position: relative;
     align-self: center;
     left: 5%;
@@ -108,156 +96,108 @@ input[type="text"]:focus::placeholder {
 
 
 #nav_superior {
-    position: sticky;
     top: 0;
     grid-column: 1/-1;
-    background-color: var(--color-secundario);
     display: flex;
     color: white;
     z-index: 5;
-    justify-content: space-evenly;
 }
 
-#nav_superior>a {
-    padding-left: 20px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    border-left: 1px solid rgba(255, 255, 255, 0.293);
-    font-size: 16px;
-    color: white;
+#nav_superior div {
+    padding: 30px;
+    font-size: 18px;
+    font-family: 'PT Sans', Arial, Helvetica, sans-serif;
+    color: #746D69;
+    display: block;
 }
 
-#nav_superior a i {
-    margin-left: 5px;
-    background-image: url(../img/icons8-triángulo-24.png);
+#nav_superior div a {
+    color: #2F72A8;
+    padding-right: 10px;
+}
+
+#nav_superior div i {
+    background-image: url(../img/icons8-chevron-right-30.png);
     display: inline-block;
     background-size: cover;
     height: 10px;
     width: 10px;
 }
 
-#contenido {
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
-    grid-template-rows: 10% 45% 45%;
-    font-family: 'PT Sans', Arial, Helvetica, sans-serif;
-    column-gap: 1px;
+#nav_superior div span {
+    padding-left: 10px;
 }
 
 
-#contenido h1 {
-    font-size: 70px;
-    margin: 10px 20px 150px;
+#navegador-lateral {
+    display: flex;
+    color: var(--color-fuente);
+    background-color: var(--color-fondo);
+    flex-direction: column;
+    position: relative;
 }
 
-#contenido>section {
-    padding: 10px;
-    font-size: 20px;
-    border: 1px solid lightgray;
-    border-radius: 4px;
+.lista-navegador-lateral {
+    margin: 60px 60px 150px;
+    border-radius: 10px;
+    padding-left: 10px;
 }
 
-#contenido .contenedor-titulo-noticias {
-    grid-column: 1/4;
-    grid-row: 1/2;
+#navegador-lateral ul>li {
+    padding: 15px 0px;
+    align-items: center;
+    border-bottom: 1px solid lightgray;
+}
+
+.lista-navegador-lateral li a {
+    font-size: 18px;
     display: flex;
     justify-content: space-between;
 }
 
-#contenido .contenedor-titulo-noticias span {
-    align-self: flex-end;
-    color: gray;
-}
-
-#contenido .contenedor-titulo-noticias span a {
-    color: blue;
-    align-self: flex-end;
-}
-
-#contenido section img {
-    max-width: 100%;
-    padding-bottom: 10px;
+.lista-navegador-lateral li a i {
+    background-image: url(../img/icons8-chevron-right-30.png);
+    display: inline-block;
+    background-size: cover;
+    height: 20px;
+    width: 15px;
+    padding-left: 20px;
 }
 
 #aside-lateral {
-    grid-column: 2/3;
-    background-color: var(--color-fondo);
+    grid-column: 3/4;
 }
 
 #aside-lateral ul {
-    font-family: 'PT Sans';
-    color: #323232;
-    font-size: 16px;
-    padding: 30px;
+    font-family: 'PT Sans', Arial, Helvetica, sans-serif;
+    padding: 40px;
+    background-color: var(--color-fondo);
 }
 
 #aside-lateral ul li {
-    padding: 30px 0;
+    list-style: none;
+    padding: 20px;
     border-top: 1px solid lightgray;
-}
-
-#aside-lateral ul li>a {
-    display: flex;
-    align-content: space-between;
-    font-family: 'PT Sans', Arial, Helvetica, sans-serif;
-    font-size: 16px;
-}
-
-#aside-lateral a>span {
-    background-size: cover;
-    /* display: inline-block; */
-    float: right;
-    height: 100px;
-    width: 140px;
 
 }
-
-#aside-lateral a .imagen-noticia {
-    background-size: cover;
-    /* display: inline-block; */
-    float: right;
-    height: 100px;
-    width: 140px;
-
-}
-
-#aside-lateral a .noticia-1 {
-    background-image: url(../img/Hands\ TILE.jpg);
-}
-
-#aside-lateral a .noticia-2 {
-    background-image: url(../img/buyng\ online.jpg);
-}
-
-#aside-lateral a .noticia-3 {
-    background-image: url(../img/OFS_sm.jpg);
-}
-
-#aside-lateral a .noticia-4 {
-    background-image: url(../img/artificial-intelligence-3382507.jpg);
-}
-
-#aside-lateral a .fecha-noticia {
-    font-size: 12px;
-    color: var(--color-secundario);
-}
-
 
 aside h2 {
-    text-align: center;
-    font-family: var(--fuente-secudaria);
-    font-size: 30px;
-    border-bottom: 1px solid lightgray;
-    padding: 10px;
+    color: #2c2c2c;
+    font-size: 18px;
+    padding-bottom: 15px;
 }
 
-
 #aside-lateral ul h3 {
-    display: inline-block;
+    color: #2f72a8;
     width: 250px;
-    font-size: 18px;
-    margin: 0;
-    vertical-align: top;
+    font-size: 16px;
+    margin-left: 15px;
+    font-family: 'PT Sans', Arial, Helvetica, sans-serif;
+}
+
+#aside-lateral h3>span {
+    font-size: 16px;
+    font-weight: normal;
 }
 
 
@@ -270,7 +210,105 @@ footer {
     font-family: var(--fuente-secudaria);
     font-size: 18px;
     color: #ffffff;
+}
 
+#contenido {
+    padding: 10px;
+    background-color: rgb(232, 232, 232);
+    font-family: var(--fuente-secudaria);
+    grid-row: 3/4;
+    grid-column: 2/3;
+    overflow-y: scroll;
+    height: 50vw;
+}
+
+#contenido h1 {
+    text-align: center;
+    background-color: white;
+    border-radius: 5px;
+}
+
+#contenido section p {
+    font-family: 'PT Serif', Arial, Helvetica, sans-serif;
+}
+
+#contenido .seccion-principal p {
+    padding: 20px 0;
+}
+
+#contenido .seccion-principal {
+    font-size: 18px;
+    padding: 20px;
+}
+
+#contenido .seccion-principal>p>ul>li {
+    list-style: circle;
+}
+
+#contenido section>article {
+    grid-row: 1/2;
+}
+
+#contenido>section {
+    background-color: white;
+    border-radius: 5px;
+    margin-top: 20px;
+    padding: 20px;
+}
+
+#contenido>section:not(.seccion-principal) {
+    display: flex;
+}
+
+
+#contenido article .titulo-articulo {
+    padding: 10px 5%;
+    text-align: justify;
+}
+
+#contenido article p {
+    text-align: justify;
+    padding: 20px;
+    font-family: var(--fuente-articulo);
+}
+
+#contenido .seccion-principal ul li {
+    list-style: disc;
+    margin-left: 20px;
+}
+
+#contenido section .aside-articulo-uno {
+    background-image: url(../img/REF\ -\ banner.small_.png);
+}
+
+#contenido .aside-articulo-dos {
+    background-image: url(../img/Knowledge\ Exchange\ Framework.png);
+}
+
+#contenido .aside-articulo-tres {
+    background-image: url(../img/economic\ impact.png);
+}
+
+#contenido .aside-articulo-cuatro {
+    background-image: url(../img/Vice\ Chancellor\s\ Awards.png);
+}
+
+#contenido section .aside-articulo {
+    float: right;
+    width: 100%;
+    height: 200px;
+    background-position-x: right;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding-left: 10px;
+    border-radius: 5px;
+    background-color: rgb(232, 232, 232);
+
+}
+
+
+footer a {
+    color: #ffffff;
 }
 
 .contenedor-redes-footer {
@@ -290,6 +328,7 @@ footer {
     width: 40px;
     margin-left: 50px;
     border-radius: 5px;
+
 }
 
 .contenedor-redes-footer a .icono-youtube-footer {
@@ -349,7 +388,6 @@ footer {
 .informacion-para>ul a {
     padding-bottom: 20px;
     font-size: 15px;
-
 }
 
 .enlaces-rapidos {
